Fix wrong swagger endpoints
