# controller/google.go
@@ -12,11 +12,11 @@ import (
 
 // Google Login godoc
 //
-// @Summary Redirect to Google login page
-// @Description This endpoint initiates the Google OAuth2 login process by redirecting the user to Google's login page.
-// @Tags OAuth
-// @Success 303 {string} string "Redirects to Google login page"
-// @Router /auth/google/login [get]
+//	@Summary		Redirect to Google login page
+//	@Description	This endpoint initiates the Google OAuth2 login process by redirecting the user to Google's login page.
+//	@Tags			oAuth
+//	@Success		303	{string}	string	"Redirects to Google login page"
+//	@Router			/auth/google_login [get]
 func GoogleLogin(c echo.Context) error {
 	var url = config.AppConfig.GoogleLoginConfig.AuthCodeURL("randomstate")
 
@@ -26,14 +26,14 @@ func GoogleLogin(c echo.Context) error {
 
 // Google Callback godoc
 //
-// @Summary Google OAuth2 callback
-// @Description This endpoint handles the callback from Google after a user authorizes the app. It exchanges the authorization code for an access token and retrieves the user's profile information.
-// @Tags OAuth
-// @Param state query string true "State for CSRF protection"
-// @Param code query string true "Authorization code returned by Google"
-// @Success 200 {string} string "User's Google profile data"
-// @Failure 400 {string} string "Error message"
-// @Router /auth/google/callback [get]
+//	@Summary		Google OAuth2 callback
+//	@Description	This endpoint handles the callback from Google after a user authorizes the app. It exchanges the authorization code for an access token and retrieves the user's profile information.
+//	@Tags			oAuth
+//	@Param			state	query		string	true	"State for CSRF protection"
+//	@Param			code	query		string	true	"Authorization code returned by Google"
+//	@Success		200		{string}	string	"User's Google profile data"
+//	@Failure		400		{string}	string	"Error message"
+//	@Router			/auth/google_callback [get]
 func GoogleCallback(c echo.Context) error {
 	var state = c.QueryParam("state")
 	if state != "randomstate" {
