# controller/user.go
@@ -25,15 +25,15 @@ func NewUserHandlers(uc *uc.UserUC) *UserHandlers {
 
 // Register godoc
 //
-// @Summary Register a new user
-// @Description This endpoint registers a new user by providing username, email, password, and role ID.
-// @Tags User
-// @Accept json
-// @Produce json
-// @Param body body model.Register true "User registration input"
-// @Success 201 {object} map[string]string "User created"
-// @Failure 400 {object} map[string]string "Error message"
-// @Router /register [post]
+//	@Summary		Register a new user
+//	@Description	This endpoint registers a new user by providing username, email, password, and role ID.
+//	@Tags			user
+//	@Accept			json
+//	@Produce		json
+//	@Param			body	body		model.Register		true	"User registration input"
+//	@Success		201		{object}	map[string]string	"User created"
+//	@Failure		400		{object}	map[string]string	"Error message"
+//	@Router			/auth/register [post]
 func (rc *UserHandlers) Register(c echo.Context) error {
 	var input model.Register
 
@@ -58,15 +58,15 @@ func (rc *UserHandlers) Register(c echo.Context) error {
 
 // Login godoc
 //
-// @Summary User login
-// @Description This endpoint allows a user to log in by providing a valid username and password.
-// @Tags User
-// @Accept json
-// @Produce json
-// @Param body body model.Login true "User login input"
-// @Success 200 {object} map[string]interface{} "Successfully logged in with JWT token"
-// @Failure 400 {object} map[string]string "Error message"
-// @Router /login [post]
+//	@Summary		User login
+//	@Description	This endpoint allows a user to log in by providing a valid username and password.
+//	@Tags			user
+//	@Accept			json
+//	@Produce		json
+//	@Param			body	body		model.Login				true	"User login input"
+//	@Success		200		{object}	map[string]interface{}	"Successfully logged in with JWT token"
+//	@Failure		400		{object}	map[string]string		"Error message"
+//	@Router			/auth/login [post]
 func (rc *UserHandlers) Login(c echo.Context) error {
 	var input model.Login
 
