# docs/swagger.yaml
@@ -5902,7 +5902,7 @@ definitions:
 info:
   contact: {}
 paths:
-  /auth/google/callback:
+  /auth/google_callback:
     get:
       description: This endpoint handles the callback from Google after a user authorizes
         the app. It exchanges the authorization code for an access token and retrieves
@@ -5929,8 +5929,8 @@ paths:
             type: string
       summary: Google OAuth2 callback
       tags:
-      - OAuth
-  /auth/google/login:
+      - oAuth
+  /auth/google_login:
     get:
       description: This endpoint initiates the Google OAuth2 login process by redirecting
         the user to Google's login page.
@@ -5941,7 +5941,68 @@ paths:
             type: string
       summary: Redirect to Google login page
       tags:
-      - OAuth
+      - oAuth
+  /auth/login:
+    post:
+      consumes:
+      - application/json
+      description: This endpoint allows a user to log in by providing a valid username
+        and password.
+      parameters:
+      - description: User login input
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/model.Login'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully logged in with JWT token
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Error message
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: User login
+      tags:
+      - user
+  /auth/register:
+    post:
+      consumes:
+      - application/json
+      description: This endpoint registers a new user by providing username, email,
+        password, and role ID.
+      parameters:
+      - description: User registration input
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/model.Register'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: User created
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Error message
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Register a new user
+      tags:
+      - user
   /deployments:
     get:
       consumes:
@@ -6092,36 +6153,6 @@ paths:
       summary: Get a deployment by name or UID
       tags:
       - deployments
-  /login:
-    post:
-      consumes:
-      - application/json
-      description: This endpoint allows a user to log in by providing a valid username
-        and password.
-      parameters:
-      - description: User login input
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/model.Login'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Successfully logged in with JWT token
-          schema:
-            additionalProperties: true
-            type: object
-        "400":
-          description: Error message
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: User login
-      tags:
-      - User
   /namespaces:
     get:
       consumes:
@@ -6408,35 +6439,4 @@ paths:
       summary: Get a pod by name or UID
       tags:
       - pods
-  /register:
-    post:
-      consumes:
-      - application/json
-      description: This endpoint registers a new user by providing username, email,
-        password, and role ID.
-      parameters:
-      - description: User registration input
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/model.Register'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: User created
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "400":
-          description: Error message
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Register a new user
-      tags:
-      - User
 swagger: "2.0"
